--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Kevin Henry <kevinhenry@mac.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "^3.2.6"
+pytest = "^6.2.4"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.7b0", allow-prereleases = true}
